--- a/pyutauplus_resampler/pyutauplus_resampler.vcxproj.filters
+++ b/pyutauplus_resampler/pyutauplus_resampler.vcxproj.filters
@@ -15,16 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pystandalone.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="pystandalone.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
+    <ClCompile Include="..\pystandalone\pystandalone.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
