Basically port uppslink to Python and bug fixes

--- a/pystandalone/pystandalone.vcxproj.filters
+++ b/pystandalone/pystandalone.vcxproj.filters
@@ -26,5 +26,13 @@
     <ClInclude Include="pystandalone.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="pystandalone.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
