--- a/pystandalone/pystandalone.vcxproj
+++ b/pystandalone/pystandalone.vcxproj
@@ -162,6 +162,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pystandalone.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="pystandalone.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
